@@ -221,7 +221,7 @@ public class JvmUtilsTest {
 
     @Test
     public void testSomeNewArgs() {
-        final String java_vm_args = "-XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -Dsun.net.client.defaultConnectTimeout=5000 -Dsun.net.client.defaultReadTimeout=500 -Djava.locale.providers==COMPAT,SPI";
+        final String java_vm_args = "-XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -Dsun.net.client.defaultConnectTimeout=5000 -Dsun.net.client.defaultReadTimeout=500";
         try {
             JvmUtils.checkVMArgs(java_vm_args);
         } catch (IllegalArgumentException ile) {
